k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
