k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-pipeline
  labels:
    app: first-pipeline
spec:
  type: ClusterIP
  selector:
    app: first-pipeline
  ports:
    - name: http
      port: 80
      targetPort: 3000
